hphp/test/zend/good/Zend/tests/bug34199.php.skipif
<?php
<<__EntryPoint>> function main() {
if (!extension_loaded("simplexml")) print "skip SimpleXML extension required";
}
