hphp/test/zend/bad/tests/basic/req44164.php.skipif
<?php
if (!function_exists('gzdeflate'))
    die("skip zlib extension required");
?>